--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -35,7 +35,7 @@
     ],
     "exclude": [
         "node_modules",
-        "dist",
-        "**/*.test.ts"
-    ]
+        "dist"
+    ],
+    "types": ["jest", "node"]
 }
